[package]
name = "tictactoe"
version = "0.1.0"
authors = ["James Madden <jamesbmadden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.8.1"
winit = "0.25.0"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
futures = "0.3.16"
image = "0.23.14"